--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -79,7 +79,7 @@
         input[type=number],
         input[type=email],
         input[type=password],
-        textarea {
+        textarea,select {
             margin-right: 3px;
             border: 1px solid rgb(51, 47, 47);
             border-radius: 5px;
