--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.0/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.js"></script>
 
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+
     <title>{% block title %}{% endblock title %} | InvManage</title>
     <style>
         body {
@@ -146,14 +149,9 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/">InvManage</a>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'profile' request.user.id %}">Hi, {{request.user.first_name}}</a>
-                    </li>
-                </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" style="color: rgb(180, 175, 175)" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link active" href="{% url 'profile' request.user.id %}">Profile</a>
                     </li>
                 </ul>
             </div>
@@ -169,33 +167,7 @@
     {% endfor %}
     {% endif %}
 
-    <div class="card mx-8 my-4 neumorphism-card"
-    style="width: 50%; margin: auto;">
-        <div class="card-body">
-            <div class="row">
-                <div class="col md-6">
-                    <img src="/media/{{club.logo}}" alt="">
-                </div>
-                <div class="col md-6">
-                    <h4>{{club.club_name}}</h4>
-                    <hr>
-                    <p>{{club.description|truncatechars:144 }}</p>
-                    {% can_user_access user.id 'items_view' club.id as can_items_view %}
-                    {% can_user_access user.id 'club_view' club.id as can_club_view %}
-                    <div class="row">
-                        <div class="col-sm-12">
-                            {% if can_items_view %}
-                                <a type="button" href="{% url 'items_view' club.id %}" class="coloured-button" id="items-button">Items</a>
-                            {% endif %}
-                            {% if can_club_view %}
-                                <a type="button" href="{% url 'club_view' club.id %}" class="coloured-button" id="users-button">Users</a>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include 'club_card.html' %}
 
     {% block body %}{% endblock body %}
 
