--- a/base/templates/club_add.html
+++ b/base/templates/club_add.html
@@ -14,20 +14,20 @@
         {% csrf_token %}
         <p><label class="form_label">Users: </label>{{form.users}}</p>
         <p><label class="form_label" onclick="toggleConvenor()">Club: </label> {{form.club_name}}</p>
-        <p id="convenor-input" style="display: none;"><label class="form_label">Convenor: </label> {{form.club_name}}</p>
+        <!-- <p id="convenor-input" style="display: none;"><label class="form_label">Convenor: </label> {{form.club_name}}</p> -->
         <p><label class="form_label">Description: </label> {{form.description}}</p>
         <p><label class="form_label">Logo: </label> {{form.logo}}</p>
         <button type="submit">Add Club</button>
     </form>
 </div>
 <script>
-    function toggleConvenor() {
-        var x = document.getElementById("convenor-input");
-        if (x.style.display === "none") {
-            x.style.display = "block";
-        } else {
-            x.style.display = "none";
-        }
-    }
+    // function toggleConvenor() {
+    //     var x = document.getElementById("convenor-input");
+    //     if (x.style.display === "none") {
+    //         x.style.display = "block";
+    //     } else {
+    //         x.style.display = "none";
+    //     }
+    // }
 </script>
 {% endblock body %}
